// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ListensCollection with full output 1`] = `
<div>
  <div
    className="listensCollection"
  >
    <ListensItemFull
      albumLink="test-albumLink-one"
      albumName="test-albumName-one"
      artist="test-artist-one"
      playcount={1}
      thumbnail="test-thumbnail-one"
    />
  </div>
</div>
`;

exports[`renders ListensCollection with full output, with multiple values 1`] = `
<div>
  <div
    className="listensCollection"
  >
    <ListensItemFull
      albumLink="test-albumLink-one"
      albumName="test-albumName-one"
      artist="test-artist-one"
      playcount={1}
      thumbnail="test-thumbnail-one"
    />
  </div>
</div>
`;

exports[`renders ListensCollection with reduced output 1`] = `
<div>
  <div
    className="listensCollection"
  >
    <ListensItemMini
      albumLink="test-albumLink-one"
      albumName="test-albumName-one"
      thumbnail="test-thumbnail-one"
    />
  </div>
</div>
`;

exports[`renders ListensCollection with reduced output, with multiple values 1`] = `
<div>
  <div
    className="listensCollection"
  >
    <ListensItemMini
      albumLink="test-albumLink-one"
      albumName="test-albumName-one"
      thumbnail="test-thumbnail-one"
    />
  </div>
</div>
`;
